Fix text wrap issue

--- a/src/components/ReadText/ReadText.css
+++ b/src/components/ReadText/ReadText.css
@@ -40,6 +40,10 @@
   /* text-wrap: wrap; */
 }
 
+.read-text-block > .zh {
+  text-wrap: wrap;
+}
+
 .simplified-text {
   margin-top: 2vmin;
   line-height: 4vmin;
